@@ -18,6 +18,7 @@ A.......S. [ZBXNEXT-3457] added support of user macros for trigger tags; dropped
 ........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)
 
 Bug fixes:
+..F....... [ZBX-8457] fixed user macro resolving for templated host and templates (Oleg)
 ..F....... [ZBX-11367] fixed xml import when non-snmp interfaces have incorrect parameter "bulk" (Gunars)
 ..F....... [ZBX-10388] removed duplicated data and reduced traffic for hint popups (Gunars)
 ..F....... [ZBX-11331] fixed JS error in Configuration->Discovery edit page (Oleg)
@@ -233,6 +234,7 @@ New features:
 ........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)
 
 Bug fixes:
+..F....... [ZBX-8457] fixed user macro resolving for templated host and templates (Oleg)
 ..F....... [ZBX-11367] fixed xml import when non-snmp interfaces have incorrect parameter "bulk" (Gunars)
 ..F....... [ZBX-10388] removed duplicated data and reduced traffic for hint popups (Gunars)
 ..F....... [ZBX-11331] fixed JS error in Configuration->Discovery edit page (Oleg)
@@ -1753,6 +1755,7 @@ New features:
 ........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)
 
 Bug fixes:
+..F....... [ZBX-8457] fixed user macro resolving for templated host and templates (Oleg)
 ...G...... [ZBX-10906] fixed agent active checks being delayed if system time was pushed back (wiper)
 A......... [ZBX-10842] fixed sql error when updating httptest with applicationid and without httpstepid parameters (Cemeris)
 A......... [ZBX-10842] prevented disappearing of step items when updating httptest without applicationid, httpstepid parameters (Cemeris)
